Fixed flicking numbers and numbers misaligned

--- a/css/custom.css
+++ b/css/custom.css
@@ -40,11 +40,6 @@ section a {
 section small {
   color: #999;
 }
-section,
-section a {
-  color: #999;
-  text-decoration: none;
-}
 /*section.active {
     background: @colour-active-backgr;
     color: @colour-body-text;
@@ -190,12 +185,10 @@ text {
   -webkit-transition: opacity 250ms;
   font-size: 2.5em;
   font-weight: 500;
-  z-index: 9999;
   font-family: 'Roboto Condensed', sans-serif;
   display: flex;
-  line-height: 1;
   padding-bottom: 2em;
-  text-align: center;
+  z-index: 9999;
 }
 /* For mobile phones: */
 [class*="col-"] {
@@ -212,10 +205,9 @@ text {
 }
 /* styling numbers */
 .count {
-  font-size: 1.7em;
+  font-size: 1.5em;
   font-family: 'Roboto Condensed', sans-serif;
   min-width: 100px;
-  display: block;
 }
 /*------------------------- Content layout ----------------------*/
 .modal-content-img {
